--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ body {
 body.active {
   background: #F6F8FF;
 }
-body.active .search_content, body.active .main {
+body.active .search_content,
+body.active .main {
   background: #FEFEFE;
   -webkit-box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.2);
           box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.2);
@@ -246,14 +247,12 @@ span {
   -webkit-column-gap: 37px;
      -moz-column-gap: 37px;
           column-gap: 37px;
-}
-.container .main .user_info .user_image {
-  width: 100%;
-  max-width: 117px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .container .main .user_info .user_image img {
-  width: 100%;
-  height: 117px;
+  width: 117px;
   border-radius: 100%;
 }
 .container .main .user_info .user {
@@ -375,10 +374,26 @@ span {
   }
 }
 @media only screen and (max-width: 600px) {
-  .container p {
+  .container .main .user_info .user_image img {
+    width: 70px;
+  }
+  .container .main .user_info .user .user_createDate_name .username h3 {
+    font-size: 16px;
+  }
+  .container .main .user_info .user .user_createDate_name .username a {
+    font-size: 10px;
+  }
+  .container .main .user_skills .user_about {
     font-size: 13px;
   }
-  .container .search_content input {
-    font-size: 28px;
+  .container .main .user_skills .status {
+    padding: 15px;
+  }
+  .container .main .user_skills .name {
+    font-size: 10px;
+  }
+  .container .main .user_skills .result {
+    font-size: 16px;
+    font-weight: 700;
   }
 }/*# sourceMappingURL=style.css.map */
