--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,15 +18,19 @@ body {
    align-items: center;
    justify-content: center;
 
-   &.active{
+   &.active {
       background: #F6F8FF;
-      .search_content, .main{
+
+      .search_content,
+      .main {
          background: #FEFEFE;
          box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.20);
       }
-      .color{
+
+      .color {
          color: black;
       }
+
       .header_content {
          .mode_dark {
             display: flex;
@@ -36,24 +40,26 @@ body {
             display: none;
          }
       }
+
       .search_content {
-   
+
          .input_search {
             width: 100%;
             display: flex;
             column-gap: 15px;
             align-items: center;
-   
+
             svg {
                line-height: 0;
             }
+
             input {
                &::placeholder {
                   color: #4B6A9B;
                }
             }
          }
-   
+
          button {
             padding: 13px 24px;
             color: #fff;
@@ -62,13 +68,15 @@ body {
             border: none;
          }
       }
-      .main{
-         .user_skills{
-            .status{
+
+      .main {
+         .user_skills {
+            .status {
                background: #F6F8FF;
             }
-            .user_credentials{
-               svg{
+
+            .user_credentials {
+               svg {
                   fill: #4B6A9B;
                }
             }
@@ -76,22 +84,27 @@ body {
       }
    }
 }
-svg{
+
+svg {
    line-height: 0;
 }
-span{
+
+span {
    color: red;
    font-weight: 700;
 }
+
 .container {
    width: 100%;
    max-width: 730px;
    display: flex;
    flex-direction: column;
    gap: 25px;
+
    .header_content {
       display: flex;
       justify-content: space-between;
+
       .company_name {
          font-size: 26px;
          font-weight: 700;
@@ -109,7 +122,8 @@ span{
          letter-spacing: 2.5px;
          text-transform: uppercase;
       }
-      .mode_dark{
+
+      .mode_dark {
          cursor: pointer;
          user-select: none;
          display: none;
@@ -137,6 +151,7 @@ span{
          display: flex;
          column-gap: 15px;
          align-items: center;
+
          svg {
             line-height: 0;
          }
@@ -147,6 +162,7 @@ span{
             outline: none;
             width: 75%;
             font-size: 18px;
+
             &::placeholder {
                color: #FFF;
                font-size: 18px;
@@ -176,15 +192,15 @@ span{
          width: 100%;
          display: flex;
          column-gap: 37px;
-         .user_image{
-            width: 100%;
-            max-width: 117px;
+         align-items: center;
+         .user_image {
+
             img {
-                  width: 100%;
-                  height: 117px;
-                  border-radius: 100%;
-               }
+               width: 117px;
+               border-radius: 100%;
+            }
          }
+
          .user {
             width: 100%;
 
@@ -227,31 +243,39 @@ span{
             display: flex;
             justify-content: space-between;
          }
-         .name{
+
+         .name {
             font-size: 13px;
          }
-         .result{
+
+         .result {
             font-size: 22px;
             font-weight: 700;
          }
-         .user_credentials{
+
+         .user_credentials {
             display: flex;
             justify-content: space-between;
-            &:not(:last-child){
+
+            &:not(:last-child) {
                padding-top: 37px;
                padding-bottom: 19px;
             }
-            svg{
+
+            svg {
                fill: white;
             }
-            p{
+
+            p {
                font-size: 15px;
             }
-            div{
+
+            div {
                display: flex;
                gap: 15px;
             }
-            .user_working_locat{
+
+            .user_working_locat {
                display: flex;
                justify-content: flex-start;
                width: 156px;
@@ -261,46 +285,82 @@ span{
 
    }
 }
-@media only screen and (max-width:995px){
-   .container{
+
+@media only screen and (max-width:995px) {
+   .container {
       padding: 0 25px;
-      .main{
-         .user_info{
-            .user{
+
+      .main {
+         .user_info {
+            .user {
                .user_createDate_name {
-                     flex-direction: column;
-                  }
+                  flex-direction: column;
+               }
             }
          }
+
          .user_skills {
-               width: 100%;
-               max-width: 100%;
-               .user_about{
-                  padding-top: 24px;
+            width: 100%;
+            max-width: 100%;
+
+            .user_about {
+               padding-top: 24px;
+            }
+
+            .user_credentials {
+               &:not(:last-child) {
+                  padding: 30px 0 17px 0;
                }
-               .user_credentials{
-                  &:not(:last-child){
-                     padding: 30px 0 17px 0;
+
+               flex-direction: column;
+
+               div {
+                  &:not(:last-child) {
+                     padding-bottom: 17px;
                   }
-                  flex-direction: column;
-                  div{
-                     &:not(:last-child){
-                        padding-bottom: 17px;
+               }
+            }
+         }
+      }
+   }
+}
+@media only screen and (max-width:600px) {
+   .container {
+      .main {
+
+         .user_info{
+            .user_image{
+               img{
+                  width: 70px;
+               }
+            }
+            .user {
+               .user_createDate_name {
+                  .username {
+                     h3 {
+                        font-size: 16px;
+                     }
+                     a{
+                        font-size: 10px;
                      }
                   }
                }
             }
-      }
-   }
-}
-@media only screen and (max-width:600px){
-   .container{
-      p{
-         font-size: 13px;
-      }
-      .search_content{
-         input{
-            font-size: 28px;
+         }
+         .user_skills {
+            .user_about {
+               font-size: 13px;
+            }
+            .status {
+               padding: 15px;
+            }
+            .name {
+               font-size: 10px;
+            }
+            .result {
+               font-size: 16px;
+               font-weight: 700;
+            }
          }
       }
    }
